Fix blurry text in Chrome

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,7 @@ h1 {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50.1%) translateY(-50.1%);
 }
 
 #logo {
@@ -50,7 +50,6 @@ h1 {
     padding: 10px;
     opacity: 0;
     transition: opacity 0.3s linear;
-    backface-visibility: hidden;
     font-size: 11px;
     line-height: 30px;
   }
